--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+system76-io-dkms (1.0.1) bionic; urgency=medium
+
+  * Add support for reading revision
+
+ -- Jeremy Soller <jeremy@system76.com>  Tue, 04 Jun 2019 09:54:04 -0600
+
 system76-io-dkms (1.0.0) bionic; urgency=medium
 
   * 1.0.0 release
